<resources>
    <string name="app_name">TheRundown</string>
    <string name="name">name</string>
    <string name="fullname">fullName</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="city">city</string>
    <string name="conference">conference</string>
    <string name="division">Division</string>
    <string name="id">Id</string>
    <string name="team">Team</string>
    <string name="game">Game</string>
    <string name="date">date</string>
    <string name="home_team">Home team</string>
    <string name="homeTeamScore">homeTeamScore</string>
    <string name="postseason">postSeason</string>
    <string name="season">season</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="visitor_team">visitor team</string>
    <string name="visitorTeamScore">VisitorTeamScore</string>
    <string name="period">period</string>
    <string name="player">player</string>
    <string name="info">Info</string>
    <string name="team_info">Team Info</string>
    <string name="game_id">GAMES ID</string>
    <string name="stat">Stat</string>
    <string name="game_dates">Game Dates</string>
    <string name="soccer_match">Soccer Match</string>
    <string name="soccer">Soccer</string>
</resources>