<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/gameBottom"
        android:enabled="true"
        android:icon="@drawable/ic_gioppino_basketball_rim"
        android:title="@string/game" />

    <item
        android:id="@+id/playerBottom"
        android:enabled="true"
        android:icon="@drawable/ic_slamdunk"
        android:title="@string/player" />
    <item
        android:id="@+id/teamBottom"
        android:enabled="true"
        android:icon="@drawable/basketball_team"
        android:title="@string/team"/>

    <item
        android:id="@+id/statBottom"
        android:enabled="true"
        android:icon="@drawable/basketball_stat"
        android:title="@string/stat"/>

    <item
        android:id="@+id/soccerMatchBottom"
        android:enabled="true"
        android:icon="@drawable/soccer"
        android:title="@string/soccer"/>
</menu>